--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@popperjs/core": "^2.11.8",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "boxicons": "^2.1.4",
     "glightbox": "^3.2.0",
     "isotope-layout": "^3.0.6",
     "jquery": "^3.7.0",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
+    "react-waypoint": "^10.3.0",
     "swiper": "^9.3.2",
     "typed": "^10.0.0-beta.2",
     "typed.js": "^2.0.16",
